--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -10,7 +10,7 @@
             <div class="account-card mr-1p">
                 <div class="flex-this">
                     <p><strong>Community Account </strong></p>
-                    <div class="tooltip mt-16 ml-8"><strong>i</strong>
+                    <div class="tooltip mt-16 ml-8">i
                         <span class="tooltiptext">
                             A community entity might be an Indigenous or local community’s Cultural Department; Tribal and Historical Preservation Office; Community Center; Preservation Office; Community Library, Archive, or Museum; Land Council; or Indigenous Rangers.
                         </span>
@@ -25,7 +25,7 @@
             <div class="account-card ml-1p mr-1p">
                 <div class="flex-this">
                     <div><p><strong>Institution Account</strong></p></div>
-                    <div class="tooltip mt-16 ml-8"><strong>i</strong>
+                    <div class="tooltip mt-16 ml-8">i
                         <span class="tooltiptext">An institution might be an archive, library, museum, historical society, gallery, data repository, university, or media production company. If you are an Indigenous institution, choose the community account.</span>
                     </div>
                 </div>
