--- a/templates/admin/partials/_data-visuals.html
+++ b/templates/admin/partials/_data-visuals.html
@@ -31,7 +31,7 @@
     <div class="w-33 dash-card">
         <div class="flex-this justify-center">
             <h2>Project Activity</h2>
-            <div class="tooltip mt-15 ml-5"><strong>i</strong>
+            <div class="tooltip mt-15 ml-5">i
                 <span class="tooltiptext">Project activity status by project count.</span>
             </div>
         </div>
@@ -89,7 +89,7 @@
             <div class="stats-count-div">
                 <div class="flex-this justify-center">
                     <h2 class="count-header">New Users</h2>
-                    <div class="tooltip mt-15 ml-5"><strong>i</strong>
+                    <div class="tooltip mt-15 ml-5">i
                         <span class="tooltiptext">In the last 30 days.</span>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
             <div class="stats-count-div">
                 <div class="flex-this justify-center">
                     <h2 class="count-header">Countries</h2>
-                    <div class="tooltip mt-15 ml-5"><strong>i</strong>
+                    <div class="tooltip mt-15 ml-5">i
                         <span class="tooltiptext">Count based on user profiles.</span>
                     </div>
                 </div>
