--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -241,7 +241,7 @@
                 {% if bclabels or tklabels %}
                     <div class="w-40 mt-16">
                         {{ form.note.label }}
-                        <div class="tooltip"><strong>i</strong>
+                        <div class="tooltip">i
                             <span class="tooltiptext">
                                 Document internal community information about how the Labels are being used on this Project and why. This will only be visible to members of your community.
                             </span>
