--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -22,7 +22,7 @@
             <div class="flex-this mt-8">
                 <div class="w-50 mr-1p">
                     <label class="pad-top-1-5">Community Entity</label>
-                    <div class="tooltip"><strong>i</strong>
+                    <div class="tooltip">i
                         <span class="tooltiptext">
                             A community entity is responsible for and looks after the development of the community’s Labels. A community entity might be an Indigenous or local community’s Cultural Department; Tribal and Historical Preservation Office; Community Center; Preservation Office; Community Library, Archive, or Museum; Land Council; or Indigenous Rangers.
                         </span>
@@ -33,7 +33,7 @@
                 <div class="w-50">
                     <label class="pad-top-1-5">State, Province, or Region</label>
 
-                    <div class="tooltip"><strong>i</strong>
+                    <div class="tooltip">i
                         <span class="tooltiptext">By stating your location we will be able to connect your community with Projects involved with this location.</span>
                     </div>
 
@@ -57,7 +57,7 @@
             <div class="pad-top-1-5">
                 <label>Community Description</label>
 
-                <div class="tooltip"><strong>i</strong>
+                <div class="tooltip">i
                     <span class="tooltiptext">A community description allows you to share key public information about your community or community organization.</span>
                 </div>
 
