--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -230,7 +230,7 @@
                 <div class="w-30 mb-16">
                     <div class="flex-this">
                         <label class='block'>Label Language <small>(select from dropdown)</small></label>
-                        <div class="tooltip mt-5 ml-5"><strong>i</strong>
+                        <div class="tooltip mt-5 ml-5">i
                             <span class="tooltiptext">
                                 Select the language for this Label. English,<br> Māori, French, and Spanish translations <br>of the Label name and template text will be <br>loaded if selected. Can't find the language <br>you are looking for? <br> Please contact us: support@localcontexts.org
                             </span>
@@ -250,7 +250,7 @@
 
                 <div class="w-80">
                     <label for="label_text">Label text</label>
-                    <div class="tooltip ml-5"><strong>i</strong>
+                    <div class="tooltip ml-5">i
                         <span class="tooltiptext">
                             Providing personal information is optional. By providing it, you consent for it to be shown to other Hub users and wherever this Label is applied. 
                             <a href="https://localcontexts.org/privacy-policy/" class="white-text underline-hover" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
