--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -45,7 +45,7 @@
 
             <div class="w-50">
                 <label for="state_province_region">State, Province, or Region</label>
-                <div class="tooltip"><strong>i</strong>
+                <div class="tooltip">i
                     <span class="tooltiptext">By stating your location we will be able to connect your Projects with communities associated with this location.</span>
                 </div>
                 
@@ -70,7 +70,7 @@
         <div class="w-100">
             <div class="pad-top-1-5">
                 <label for="description">Institution Description</label>
-                <div class="tooltip"><strong>i</strong>
+                <div class="tooltip">i
                     <span class="tooltiptext">An institution description allows you to share key public information about your institution or organization with other users on the Hub.</span>
                 </div>
 
