--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -56,7 +56,7 @@
         <div class="w-100">
             <div class="pad-top-1-5">
                 <label for="description">Institution Description</label>
-                <div class="tooltip"><strong>i</strong>
+                <div class="tooltip">i
                     <span class="tooltiptext">An institution description allows you to share key public information about your institution or organization with other users on the Hub.</span>
                 </div>
 
