--- a/templates/partials/_add-projectperson.html
+++ b/templates/partials/_add-projectperson.html
@@ -14,7 +14,7 @@
                 <div id="person-form-0" class="flex-this row mr-16 mb-8">
                     <div class="mr-1p">
                         <label>{{ f.name.label }}</label>
-                        <div class="tooltip"><strong>?</strong>
+                        <div class="tooltip">?
                             <span class="tooltiptext">
                                 Add contributors who are not yet registered in the Hub.
                             </span>
