--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -19,7 +19,7 @@
 
                     <div class="flex-this">
                         <label class='block'>Translated Language <small>(select from dropdown)</small></label>
-                        <div class="tooltip mt-5 ml-5"><strong>i</strong>
+                        <div class="tooltip mt-5 ml-5">i
                             <span class="tooltiptext">
                                 Select the language for this Label. English, Māori, French, and Spanish translations of the Label name and template text will be loaded if selected. Can't find the language you are looking for?<br>
                                 Please contact us: support@localcontexts.org
