--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -93,7 +93,7 @@
             </p>
 
             {{ form.project_type.label }}
-            <div class="tooltip"><strong>?</strong>
+            <div class="tooltip">?
                 <span class="tooltiptext">
                     For example, a Local Contexts Project could include adding a Notice to: 
                     <ul>
@@ -140,7 +140,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project Title*</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">A couple of words identifying the project and making it accessible to your collaborators.</span>
                 </div>
                 <br>
@@ -152,7 +152,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project Description*</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">Briefly describe the project.</span>
                 </div>
                 <br>
@@ -164,7 +164,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project Links <small>(if applicable)</small></label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
                         Relevant link(s) to the object entry, catalog, collection or database with more information about the project, or where 
                         {% if community %} Labels {% endif %}
@@ -204,7 +204,7 @@
             <h3>Project Contacts</h3>
 
             <span>Who is involved with this project?</span>                 
-            <div class="tooltip"><strong>?</strong>
+            <div class="tooltip">?
                 <span class="tooltiptext">
                     Note that by adding project contributors, the visibility of this project will be set to contributor view.
                 </span>
@@ -220,7 +220,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project Contact Name* </label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">Primary person to contact and discuss this project.</span>
                 </div>
                 <br>
@@ -249,7 +249,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Provider's Project ID</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
                         An external Project ID, like a catalog or accession number (or alternate project ID), that is already being used in a different system from the Local Contexts Hub.                    
                     </span>
@@ -263,7 +263,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project Data GUID</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
                         A Globally Unique Identifier, such as an ARK identifier.
                     </span>
@@ -277,7 +277,7 @@
 
             <div class="padding-bottom-1 w-50">
                 <label>Project DOI</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
                         A persistent, unique identifier commonly assigned to digital publications, such as ebooks and journal articles.                    
                     </span>
@@ -317,7 +317,7 @@
 
             <div class="mb-1p mt-1p w-80">
                 {{ form.project_privacy.label }}* 
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
 
                         Limited Project information can be accessed with the Hub API:
