--- a/templates/public.html
+++ b/templates/public.html
@@ -491,7 +491,7 @@
                                     <div class="mt-8">
                                         <label>Requested Responsibility</label>
                                         {% if institution %}
-                                            <div class="tooltip mt-10 ml-5"><strong>i</strong>
+                                            <div class="tooltip mt-10 ml-5">i
                                                 <span class="tooltiptext" >
                                                     <strong>Administrator:</strong> Add, remove, and update account’s users, and abilities of an Editor<br><br>
                                                     <strong>Editor:</strong> Place Notices, create and edit Projects, and notify communities<br><br>
@@ -499,7 +499,7 @@
                                                 </span>
                                             </div>
                                         {% elif community %}
-                                            <div class="tooltip mt-10 ml-5"><strong>i</strong>
+                                            <div class="tooltip mt-10 ml-5">i
                                                 <span class="tooltiptext">
                                                     <strong>Administrator:</strong> Add, remove, and update account’s users, and abilities of an Editor<br><br>
                                                     <strong>Editor:</strong> Customize, edit, and review account Labels, and create and edit Projects<br><br>
