--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -154,7 +154,7 @@
 <span class="boundary-selection-unit">
     <div class="region-container">
         <label class="pad-top-1-5">Search the Native Land Digital database</label>
-        <div class="tooltip"><strong>?</strong>
+        <div class="tooltip">?
             <span class="tooltiptext">
                 Native Land Digital is an Indigenous-led mapping tool that maps Indigenous territories, treaties,
                 and languages around the world.
@@ -178,7 +178,7 @@
     </div>
     <div class="browse-files-container">
                 <label class="pad-top-1-5">Upload shapefile (. zip)</label>
-                <div class="tooltip"><strong>?</strong>
+                <div class="tooltip">?
                     <span class="tooltiptext">
                         A shapefile is a vector data file format commonly used for geospatial analysis.
                         You can create shapefiles on third-party websites like ArcGIS and QGIS.
