--- a/templates/partials/_add-contributors.html
+++ b/templates/partials/_add-contributors.html
@@ -6,7 +6,7 @@
 <div class="padding-bottom-1 flex-this row">
     <div>
         <label for="contributors">Project Contributors</label>
-        <div class="tooltip"><strong>?</strong>
+        <div class="tooltip">?
             <span class="tooltiptext">
                 Any institutional, community, or researcher contributors involved in the Project who are registered in the Hub.
             </span>
