--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -83,7 +83,7 @@
         <div class="flex-this space-between">
             <div class="flex-this">
                 <h2 class="primary-black-text mt-0">Request to join</h2>
-                <div class="tooltip ml-5" style="margin-top: 7px;"><strong>i</strong>
+                <div class="tooltip ml-5" style="margin-top: 7px;">i
                     <span class="tooltiptext">
                         <strong>You should request to join community and institution accounts you are already affiliated with. </strong> <br><br>
                         If you wish to collaborate with a community or institution you are not affiliated with, you will connect with them through Projects. You do not need to join their account.
