--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -46,7 +46,7 @@
 
             <div class="mb-8">
                 <label for="primary_institution">Primary Institution</label>
-                <div class="tooltip"><strong>i</strong>
+                <div class="tooltip">i
                     <span class="tooltiptext">If you are associated with an institution, please list your primary institution.</span>
                 </div>
                 {{ form.primary_institution }}
@@ -63,7 +63,7 @@
             <div>
                 <div>
                     <label for="description">Researcher Description</label>
-                    <div class="tooltip"><strong>i</strong>
+                    <div class="tooltip">i
                         <span class="tooltiptext">This is a place for you to share your research interests and expertise.</span>
                     </div>
 
